objects/Collection__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Collected_Date__c</fullName>
        <label>Amount Collected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount_Collected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amount Collected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Collection_Description__c</fullName>
        <label>Amount Collection Description</label>
        <type>TextArea</type>
    </fields>
    <label>Collection</label>
    <nameField>
        <label>Collection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>